--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-transition-group": "4.3.0"
   },
   "devDependencies": {
