--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-loader-spinner": "^4.0.0",
+    "react-lottie": "^1.2.3",
     "react-transition-group": "4.3.0"
   },
   "devDependencies": {
