--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": ["next", "next/core-web-vitals"],
   "rules": {
     "@next/next/no-sync-scripts": "off",
-    "react/display-name": "off"
+    "react/display-name": "off",
+    "@next/next/no-img-element": "off"
   }
 }
